[package]
name = "jclass"
version = "0.2.0"
edition = "2021"
#build = "build/build.rs"
description = "a simple lib for java class file parse or edit"
license = "Apache-2.0"
repository = "https://github.com/kyle-derrick/jclass-rs"

#[profile.release]
#debug = true

[dependencies]


#[build-dependencies]
#bindgen="0.70"